--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         div.className = "final-entry";
         div.innerHTML = `
           <div class="video-thumbnail" id="thumb-${index}">
-            <img src="https://via.placeholder.com/400x225.png?text=Preview" alt="Video preview" class="thumb-img">
+           
           </div>
           <strong>${link.name}</strong>
           <small>${link.size}</small>
@@ -293,7 +293,7 @@
     function playInline(url, containerId, buttonEl) {
       const container = document.getElementById(containerId);
       container.innerHTML = `
-        <video controls autoplay muted playsinline style="width:100%; height:100%; position:absolute; top:0; left:0; border-radius:10px;">
+        <video controls autoplay nodownload playsinline style="width:100%; height:100%; position:absolute; top:0; left:0; border-radius:10px;">
           <source src="${url}" type="video/mp4">
           Your browser does not support the video tag.
         </video>
