--- a/index.html
+++ b/index.html
@@ -372,12 +372,21 @@
       }
 
       const container = document.getElementById(containerId);
-      container.innerHTML = `
-        <video controls autoplay playsinline style="width:100%; height:100%; position:absolute; top:0; left:0; border-radius:10px;" oncontextmenu="return false;">
-          <source src="${url}" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-      `;
+     container.innerHTML = `
+  <video 
+    controls 
+    autoplay 
+    playsinline 
+    controlsList="nodownload"
+    style="width:100%; height:100%; object-fit:cover; position:absolute; top:0; left:0; border-radius:10px; object-fit: cover;   /* or contain / fill */
+" 
+    oncontextmenu="return false"
+  >
+    <source src="${url}" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+`;
+
       const videoEl = container.querySelector("video");
       videoEl.addEventListener("play", () => {
         if (currentPlayingVideo && currentPlayingVideo !== videoEl) {
