--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
   <!-- Modal -->
   <div id="customModal" class="modal-overlay">
     <div class="modal">
-      <h2>This page will redirect you</h2>
+      <h2>" புதிய தளம் திறக்கப்படும் ,அதில் 5 வினாடிகள் காத்திருக்கவும். உங்கள் படம் தானாகவே பதிவிறக்கம் செய்யப்படும்."</h2>
       <p id="downloadStatus" style="color:#555; font-size:0.9rem; margin-top:0.5rem;"></p>
       <button onclick="handleModalConfirm()">Okay</button>
     </div>
@@ -288,64 +288,77 @@
     });
 
     async function fetchWithRetry(url, retries = 3, delay = 500) {
-      for (let i = 0; i < retries; i++) {
-        try {
-          const res = await fetch(url, { cache: "no-store" });
-          if (!res.ok) throw new Error(`HTTP ${res.status}`);
-          return await res.text();
-        } catch (err) {
-          if (i === retries - 1) throw err;
-          await new Promise(res => setTimeout(res, delay));
-        }
-      }
+  for (let i = 0; i < retries; i++) {
+    try {
+      const res = await fetch(url, { cache: "no-store" });
+      if (!res.ok) throw new Error(`HTTP ${res.status}`);
+      return await res.text();
+    } catch (err) {
+      if (i === retries - 1) throw err;
+      await new Promise(res => setTimeout(res, delay));
     }
+  }
+}
 
-    async function fetchAndRender(url, autoFollow = false) {
-      spinner.style.display = "block";
-      try {
-        const html = await fetchWithRetry(allOrigins + encodeURIComponent(url));
-        const section = html.split('<div class="tamilprintda"')[0];
-        const matches = [...section.matchAll(/<div class="M1">.*?<a[^>]+href="([^"]+)"[^>]*>(.*?)<\/a><br>(.*?)<\/td>/gs)];
+async function fetchAndRender(url, autoFollow = false, retries = 3, delay = 1000) {
+  spinner.style.display = "block";
 
-        if (!autoFollow) resultsDiv.innerHTML = "";
+  for (let attempt = 0; attempt < retries; attempt++) {
+    try {
+      const html = await fetchWithRetry(allOrigins + encodeURIComponent(url));
+      const section = html.split('<div class="tamilprintda"')[0];
+      const matches = [...section.matchAll(/<div class="M1">.*?<a[^>]+href="([^"]+)"[^>]*>(.*?)<\/a><br>(.*?)<\/td>/gs)];
 
-        for (let i = 0; i < matches.length; i++) {
-          const [_, href, rawTitle, rawDesc] = matches[i];
-          const title = rawTitle.trim().replace(/TamilPrint/g, "Movies Aro - தமிழ்");
-          const desc = rawDesc.replace(/<[^>]+>/g, '').trim();
-          const matchId = href.match(/(\d{2,7})\/?$/);
+      if (!autoFollow) resultsDiv.innerHTML = "";
 
-          if (autoFollow) {
-            if (matchId) {
-              digitLinks.push({ url: downloadPrefix + matchId[1], name: title, size: desc });
-            } else if (i === 0) {
-              await fetchAndRender(baseURL + href, true);
-            }
-          } else {
-            const item = document.createElement("div");
-            item.className = "final-entry";
-            item.innerHTML = `<strong>${title}</strong><small>${desc}</small>`;
-            item.onclick = () => {
-              resultsDiv.innerHTML = "";
-              spinner.style.display = "block";
-              fetchAndRender(baseURL + href, true).then(showResults);
-            };
-            resultsDiv.appendChild(item);
+      for (let i = 0; i < matches.length; i++) {
+        const [_, href, rawTitle, rawDesc] = matches[i];
+        const title = rawTitle.trim().replace(/TamilPrint/g, "Movies Aro - தமிழ்");
+        const desc = rawDesc.replace(/<[^>]+>/g, '').trim();
+        const matchId = href.match(/(\d{2,7})\/?$/);
+
+        if (autoFollow) {
+          if (matchId) {
+            digitLinks.push({ url: downloadPrefix + matchId[1], name: title, size: desc });
+          } else if (i === 0) {
+            await fetchAndRender(baseURL + href, true);
           }
+        } else {
+          const item = document.createElement("div");
+          item.className = "final-entry";
+          item.innerHTML = `<strong>${title}</strong><small>${desc}</small>`;
+          item.onclick = () => {
+            resultsDiv.innerHTML = "";
+            spinner.style.display = "block";
+            fetchAndRender(baseURL + href, true).then(showResults);
+          };
+          resultsDiv.appendChild(item);
         }
-
-        if (autoFollow && digitLinks.length > 0) {
-          showResults();
-        } else if (!autoFollow && matches.length === 0) {
-          resultsDiv.innerHTML = `<p style="text-align:center; color:#999;">❌ No results found.</p>`;
-        }
-      } catch (err) {
-        resultsDiv.innerHTML = `<p style="text-align:center; color:red;">❌ Failed to load content.</p>`;
-        console.error("Fetch failed:", err);
-      } finally {
-        spinner.style.display = "none";
       }
+
+      if (autoFollow && digitLinks.length > 0) {
+        showResults();
+      } else if (!autoFollow && matches.length === 0) {
+        resultsDiv.innerHTML = `<p style="text-align:center; color:#999;">❌ No results found.</p>`;
+      }
+
+      return; // successful, exit the retry loop
+    } catch (err) {
+      console.warn(`Attempt ${attempt + 1} failed:`, err);
+      if (attempt < retries - 1) {
+        await new Promise(res => setTimeout(res, delay));
+      } else {
+        // Only show error if final attempt fails
+        if (!autoFollow) {
+          resultsDiv.innerHTML = `<p style="text-align:center; color:red;">❌ Failed to load content after multiple attempts.</p>`;
+        }
+        console.error("Final fetch/render failure:", err);
+      }
+    } finally {
+      if (attempt === retries - 1) spinner.style.display = "none";
     }
+  }
+}
 
     function showResults() {
       resultsDiv.innerHTML = "";
