--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
 <body>
   <header>
-    <h1>Movie Aro - Tamil</h1>
+    <h1>Movie Aro - தமிழ்</h1>
     <p>The Name of Quality</p>
   </header>
 
@@ -241,7 +241,7 @@
   <!-- Modal -->
   <div id="customModal" class="modal-overlay">
     <div class="modal">
-      <h2>" புதிய தளம் திறக்கப்படும் ,அதில் 5 வினாடிகள் காத்திருக்கவும். உங்கள் படம் தானாகவே பதிவிறக்கம் செய்யப்படும்."</h2>
+      <h2>புதிய தளம் திறக்கப்படும் ,அதில் 5 வினாடிகள் காத்திருக்கவும். உங்கள் படம் தானாகவே பதிவிறக்கம் செய்யப்படும்.</h2>
       <p id="downloadStatus" style="color:#555; font-size:0.9rem; margin-top:0.5rem;"></p>
       <button onclick="handleModalConfirm()">Okay</button>
     </div>
