--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
         transform: translateY(0);
       }
     }
+
+   header p{color:black;}
   </style>
 </head>
 
@@ -233,7 +235,7 @@
     <h1>Movie Aro - தமிழ்</h1>
     <p>The Name of Quality</p>
   </header>
-
+<hr/>
   <input type="text" id="searchBox" placeholder="Search movies..." />
   <div id="spinner" class="spinner"></div>
   <div id="results"></div>
