--- a/index.html
+++ b/index.html
@@ -235,8 +235,37 @@
     <h1>Movie Aro - தமிழ்</h1>
     <p>The Name of Quality</p>
   </header>
-<hr/>
+  <div><hr/></div>
+
   <input type="text" id="searchBox" placeholder="Search movies..." />
+
+  <!-- HTML Button -->
+<a href="https://t.me/YourTelegramGroup" target="_blank" class="telegram-btn">
+  🔴 Join Telegram Group
+</a>
+
+<!-- CSS Styling -->
+<style>
+.telegram-btn {
+  display: inline-block;
+  background: linear-gradient(to right, #b00020, #ff1744); /* premium red gradient */
+  color: white;
+  padding: 12px 24px;
+  border-radius: 50px;
+  font-weight: bold;
+  font-size: 16px;
+  text-decoration: none;
+  box-shadow: 0 4px 12px rgba(255, 0, 0, 0.3);
+  transition: all 0.3s ease;
+}
+
+.telegram-btn:hover {
+  background: linear-gradient(to right, #ff1744, #d50000);
+  transform: scale(1.05);
+  box-shadow: 0 6px 16px rgba(255, 0, 0, 0.5);
+}
+</style>
+
   <div id="spinner" class="spinner"></div>
   <div id="results"></div>
 
