--- a/index.html
+++ b/index.html
@@ -240,31 +240,34 @@
   <input type="text" id="searchBox" placeholder="Search movies..." />
 
   <!-- HTML Button -->
+<!-- HTML -->
 <a href="https://t.me/YourTelegramGroup" target="_blank" class="telegram-btn">
   🔴 Join Telegram Group
 </a>
 
-<!-- CSS Styling -->
+<!-- CSS -->
 <style>
 .telegram-btn {
   display: inline-block;
-  background: linear-gradient(to right, #b00020, #ff1744); /* premium red gradient */
+  background: linear-gradient(to right, #c62828, #e53935);
   color: white;
-  padding: 12px 24px;
-  border-radius: 50px;
-  font-weight: bold;
-  font-size: 16px;
+  padding: 8px 16px;
+  border-radius: 30px;
+  font-weight: 600;
+  font-size: 14px;
   text-decoration: none;
-  box-shadow: 0 4px 12px rgba(255, 0, 0, 0.3);
-  transition: all 0.3s ease;
+  white-space: nowrap;
+  box-shadow: 0 3px 8px rgba(229, 57, 53, 0.3);
+  transition: all 0.25s ease-in-out;
 }
 
 .telegram-btn:hover {
-  background: linear-gradient(to right, #ff1744, #d50000);
+  background: linear-gradient(to right, #e53935, #b71c1c);
   transform: scale(1.05);
-  box-shadow: 0 6px 16px rgba(255, 0, 0, 0.5);
+  box-shadow: 0 4px 12px rgba(229, 57, 53, 0.5);
 }
 </style>
+
 
   <div id="spinner" class="spinner"></div>
   <div id="results"></div>
