--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
   <input type="text" id="searchBox" placeholder="Search movies..." />
 
-  <!-- HTML Button -->
+ <div><!-- HTML Button -->
 <!-- HTML -->
 <a href="https://t.me/YourTelegramGroup" target="_blank" class="telegram-btn">
   🔴 Join Telegram Group
@@ -268,7 +268,7 @@
 }
 </style>
 
-
+ </div>
   <div id="spinner" class="spinner"></div>
   <div id="results"></div>
 
