--- a/index.html
+++ b/index.html
@@ -241,32 +241,82 @@
 
  <div><!-- HTML Button -->
 <!-- HTML -->
-<a href="https://t.me/YourTelegramGroup" target="_blank" class="telegram-btn">
-  🔴 Join Telegram Group
-</a>
+<!-- HTML -->
+<div class="pulse-container">
+  <a href="https://t.me/YourTelegramGroup" target="_blank" class="pulse-button">
+    Join Telegram Group
+  </a>
+</div>
 
 <!-- CSS -->
 <style>
-.telegram-btn {
-  display: inline-block;
-  background: linear-gradient(to right, #c62828, #e53935);
-  color: white;
-  padding: 8px 16px;
-  border-radius: 30px;
-  font-weight: 600;
-  font-size: 14px;
-  text-decoration: none;
-  white-space: nowrap;
-  box-shadow: 0 3px 8px rgba(229, 57, 53, 0.3);
-  transition: all 0.25s ease-in-out;
+/* Center the container */
+.pulse-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Full screen */
+  background: #f5f5f5; /* Optional: light background */
 }
 
-.telegram-btn:hover {
-  background: linear-gradient(to right, #e53935, #b71c1c);
-  transform: scale(1.05);
-  box-shadow: 0 4px 12px rgba(229, 57, 53, 0.5);
+/* The circular button */
+.pulse-button {
+  position: relative;
+  background: linear-gradient(135deg, #d50000, #ff5252);
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 160px;
+  height: 160px;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 160px;
+  text-decoration: none;
+  box-shadow: 0 0 15px rgba(255, 0, 0, 0.4);
+  overflow: hidden;
+  z-index: 1;
+  text-wrap: balance;
+  padding: 0 20px;
+}
+
+/* Text wrapping fix for smaller screens */
+.pulse-button span {
+  display: block;
+  line-height: 1.2;
+}
+
+/* The pulse animation (circle around) */
+.pulse-button::before {
+  content: "";
+  position: absolute;
+  top: -20%;
+  left: -20%;
+  width: 200%;
+  height: 200%;
+  background: radial-gradient(circle, rgba(255,82,82,0.4) 20%, transparent 70%);
+  border-radius: 50%;
+  animation: pulseWave 2s infinite;
+  z-index: -1;
+}
+
+/* Animation keyframes */
+@keyframes pulseWave {
+  0% {
+    transform: scale(0.7);
+    opacity: 0.8;
+  }
+  70% {
+    transform: scale(1.3);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1.5);
+    opacity: 0;
+  }
 }
 </style>
+
 
  </div>
   <div id="spinner" class="spinner"></div>
