--- a/redirector.html
+++ b/redirector.html
@@ -7,7 +7,13 @@
   <p>Please wait while we prepare your download...</p>
   <script>
     setTimeout(() => {
-      window.open("https://example.com", "_blank");
+     // Open the redirect chain in a new tab
+  const newTab = window.open("https://example.com", "_blank");
+
+  if (!newTab) {
+    alert("Popup blocked. Please allow popups.");
+    return;
+  }
     }, 0);
 
   
