--- a/redirector.html
+++ b/redirector.html
@@ -16,6 +16,27 @@
         return;
       }
 
+
+
+  // Open new tab and navigate to example.com
+  
+
+  // After 5 seconds, redirect the new tab to Google
+  setTimeout(() => {
+    try {
+      newTab.location.href = "https://www.google.com";
+    } catch (e) {
+      console.warn("Failed to redirect to Google:", e);
+    }
+  }, 5000);
+
+ 
+
+
+
+
+
+      
       // You can chain more redirects in that tab using postMessage or a redirector page
 
       setTimeout(() => {
@@ -23,7 +44,7 @@
           window.opener.postMessage("redirects-complete", "*");
           window.close(); // optional
         }
-      }, 5000);
+      }, 10000);
     }
   </script>
 </body>
