--- a/redirector.html
+++ b/redirector.html
@@ -9,7 +9,7 @@
 
   <script>
     function startRedirects() {
-      const newTab = window.open("https://example.com", "_blank");
+      const newTab = window.open("https://example.com", "_self");
 
       if (!newTab) {
         alert("Popup blocked. Please allow popups.");
