--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@ function handleModalConfirm() {
   document.getElementById("downloadStatus").textContent = "Preparing your download...";
 
   // Open a controlled redirector page (same origin)
-  const redirectWindow = window.open("/df/redirector.html", "_self");
+  const redirectWindow = window.open("/df/redirector.html", "_blank");
 
   if (!redirectWindow) {
     alert("Popup blocked. Please allow popups.");
