--- a/redirector.html
+++ b/redirector.html
@@ -8,7 +8,7 @@
 
   <script>
     // Immediately redirect to example.com
-    window.location.href = "https://example.com","_blank;
+    window.open = "https://example.com","_blank;
 
     // After 5 seconds, go to Google (only works if staying in same tab)
     setTimeout(() => {
