--- a/redirector.html
+++ b/redirector.html
@@ -16,7 +16,7 @@
         return;
       }
  setTimeout(() => {
-    const newTab = window.open("https://google.com", "_blank");
+    const newTab = window.open("https://google.com", "_self");
 
       if (!newTab) {
         alert("Popup blocked. Please allow popups.");
