--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ width:300px;
 
    
 .movie-button {
-    padding: 15px 30px;
+    padding: 15px 85px;
     font-size: 18px;
     color: #fff;
     background-color: #000912a6;
@@ -358,15 +358,14 @@ width:300px;
   <button class="movie-button">All Tamil Dubbed Movies</button>
 </a>
 
-    <button class="movie-button">Tamil Yearly Movies</button>
-    <button class="movie-button">Tamil Old Movies</button>
+  
   </div>
 
 
   <!-- Redirect Modal -->
   <div id="redirectModal">
     <div id="redirectModalContent">
-      <p>Please wait, you are redirecting...</p>
+      <p>இப்பொழுது ஒரு பக்கம் உருவாகும், அதில் "Download File Now" ஐ கிளிக் செய்யவும்.</p>
       <button id="redirectOkayBtn">Okay</button>
     </div>
   </div>
