--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Movie Aro - Tamil</title>
+  <title>Movies Aro - Tamil</title>
   <link rel="icon" type="image/svg+xml" href="/logo.svg">
   <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;700&display=swap" rel="stylesheet"/>
 
@@ -122,7 +122,7 @@ width:300px;
       color: #333;
     }
 
-    header, footer {
+    header {
       background: #fff;
       text-align: center;
       padding: 20px;
@@ -192,7 +192,7 @@ width:300px;
     }
 
     .item strong {
-      font-size: 18px;
+     
       display: block;
       margin-bottom: 6px;
     }
