--- a/index.html
+++ b/index.html
@@ -418,66 +418,43 @@ width:300px;
           const item = document.createElement("div");
           item.className = "item";
           item.innerHTML = `<strong>${title}</strong><small>${desc}</small>`;
-item.onclick = async () => {
-  // Prevent multiple triggers
-  if (item.classList.contains("loading")) return;
+   item.onclick = async () => {
+            const matchId = href.match(/(\d{2,7})\/?$/);
+            if (matchId) {
+              const fullURL = downloadPrefix + matchId[1];
+              try {
+                const source = await fetchWithRetry(fullURL);
+                const linkMatch = source.match(/<a\s+href="([^"]+)"[^>]*>click here to Download<\/a>/i);
+                if (linkMatch) {
+                  let downloadLink = linkMatch[1];
+                  if (downloadLink.startsWith("//")) downloadLink = "https:" + downloadLink;
 
-  item.classList.add("loading");
+                  const btn = document.createElement("a");
+                  btn.href = downloadLink;
+                  btn.textContent = "Download";
+                  btn.className = "download-btn";
+                  btn.target = "_blank";
+                  item.appendChild(document.createElement("br"));
+                  item.appendChild(btn);
+                } else {
+                  const msg = document.createElement("p");
+                  msg.style.color = "orange";
+                  msg.textContent = "⚠️ Download link not found.";
+                  item.appendChild(msg);
+                }
+              } catch (e) {
+                const msg = document.createElement("p");
+                msg.style.color = "red";
+                msg.textContent = "❌ Failed to fetch download.";
+                item.appendChild(msg);
+              }
+            } else {
+              fetchAndRender(baseURL + href);
+            }
+          };
 
-  // Clean previous appended elements (like buttons, wait texts)
-  item.querySelectorAll(".wait-msg, .download-btn, .error-msg").forEach(el => el.remove());
-
-  // Show "Please wait..." message
-  const waitMsg = document.createElement("p");
-  waitMsg.textContent = "⏳ Please wait...";
-  waitMsg.className = "wait-msg";
-  waitMsg.style.color = "#007bff";
-  item.appendChild(waitMsg);
-
-  const matchId = href.match(/(\d{2,7})\/?$/);
-  if (!matchId) {
-    item.classList.remove("loading");
-    waitMsg.textContent = "❌ Invalid link.";
-    waitMsg.className = "error-msg";
-    waitMsg.style.color = "red";
-    return;
-  }
-
-  const fullURL = downloadPrefix + matchId[1];
-
-  try {
-    const source = await fetchWithRetry(fullURL);
-    const linkMatch = source.match(/<a\s+href="([^"]+)"[^>]*>click here to Download<\/a>/i);
-
-    if (linkMatch) {
-      let downloadLink = linkMatch[1];
-      if (downloadLink.startsWith("//")) downloadLink = "https:" + downloadLink;
-
-      // Create download button
-      const btn = document.createElement("a");
-      btn.href = downloadLink;
-      btn.textContent = "⬇️ Download";
-      btn.className = "download-btn";
-      btn.target = "_blank";
-
-      item.appendChild(document.createElement("br"));
-      item.appendChild(btn);
-    } else {
-      waitMsg.textContent = "⚠️ Download link not found.";
-      waitMsg.className = "error-msg";
-      waitMsg.style.color = "orange";
-    }
-  } catch (e) {
-    waitMsg.textContent = "❌ Failed to fetch download.";
-    waitMsg.className = "error-msg";
-    waitMsg.style.color = "red";
-  } finally {
-    item.classList.remove("loading");
-    // Remove the wait message ONLY if a button was created
-    const found = item.querySelector(".download-btn");
-    if (found && waitMsg) waitMsg.remove();
-  }
-};
+          resultsDiv.appendChild(item);
+        }
 
 
         const titleMatch = html.match(/<h2 class="head">(.*?)<\/h2>/);
@@ -497,7 +474,13 @@ item.onclick = async () => {
       }
     }
   </script>
-
+  <footer1 style="text-align: center; padding: 30px; font-size: 14px; color: #888;">
+ <p>
+    We love cinema. We don’t support piracy.
+    But when theatres price water, popcorn, parking, and basic comforts higher than the experience itself — this is not theft, it's a protest.<br />
+    Fix the system, and we’ll pay happily to watch cinema in theatre.
+  </p>
+</footer1>
 </!doctype>
 </div>
 
@@ -522,7 +505,7 @@ item.onclick = async () => {
       setTimeout(() => {
         starterScreen.style.display = "none";
         mainContent.style.display = "block";
-      }, 5000);
+      }, 1000);
     });
   </script>
 
@@ -530,13 +513,7 @@ item.onclick = async () => {
  
 <br/>
   
-    <footer1 style="text-align: center; padding: 30px; font-size: 14px; color: #888;">
- <p>
-    We love cinema. We don’t support piracy.
-    But when theatres price water, popcorn, parking, and basic comforts higher than the experience itself — this is not theft, it's a protest.<br />
-    Fix the system, and we’ll pay happily to watch cinema in theatre.
-  </p>
-</footer1>
+  
 
 
  
