--- a/index.html
+++ b/index.html
@@ -416,61 +416,51 @@ width:300px;
           const desc = m[3].replace(/<[^>]+>/g, '').trim();
 
          const item = document.createElement("div");
-item.className = "item";
-item.innerHTML = `<strong class="title-click">${title}</strong><small>${desc}</small>`;
+          item.className = "item";
+          item.innerHTML = `<strong>${title}</strong><small>${desc}</small>`;
 
-// Bind click handler to the <strong> only
-item.querySelector(".title-click").onclick = async (e) => {
-  e.stopPropagation(); // Prevent bubbling if needed
+          item.onclick = async () => {
+            const matchId = href.match(/(\d{2,7})\/?$/);
+            if (matchId) {
+              const fullURL = downloadPrefix + matchId[1];
+  const msg = document.createElement("p");
+                  msg.style.color = "orange";
+                  msg.textContent = "Please wait...";
+                  item.appendChild(msg);
+                
+              try {
+                const source = await fetchWithRetry(fullURL);
+                const linkMatch = source.match(/<a\s+href="([^"]+)"[^>]*>click here to Download<\/a>/i);
+                if (linkMatch) {
+                  let downloadLink = linkMatch[1];
+                  if (downloadLink.startsWith("//")) downloadLink = "https:" + downloadLink;
 
-  const matchId = href.match(/(\d{2,7})\/?$/);
-  if (matchId) {
-    const fullURL = downloadPrefix + matchId[1];
+                  const btn = document.createElement("a");
+                  btn.href = downloadLink;
+                  btn.textContent = "Download";
+                  btn.className = "download-btn";
+                  btn.target = "_blank";
+                  item.appendChild(document.createElement("br"));
+                  item.appendChild(btn);
+                } else {
+                  const msg = document.createElement("p");
+                  msg.style.color = "orange";
+                  msg.textContent = "⚠️ Download link not found.";
+                  item.appendChild(msg);
+                }
+              } catch (e) {
+                const msg = document.createElement("p");
+                msg.style.color = "red";
+                msg.textContent = "❌ Failed to fetch download.";
+                item.appendChild(msg);
+              }
+            } else {
+              fetchAndRender(baseURL + href);
+            }
+          };
 
-    // Show "Please wait..." message
-    const waitMsg = document.createElement("p");
-    waitMsg.style.color = "blue";
-    waitMsg.textContent = "⏳ Please wait...";
-    item.appendChild(waitMsg);
-
-    try {
-      const source = await fetchWithRetry(fullURL);
-      const linkMatch = source.match(/<a\s+href="([^"]+)"[^>]*>click here to Download<\/a>/i);
-
-      waitMsg.remove();
-
-      if (linkMatch) {
-        let downloadLink = linkMatch[1];
-        if (downloadLink.startsWith("//")) downloadLink = "https:" + downloadLink;
-
-        const btn = document.createElement("a");
-        btn.href = downloadLink;
-        btn.textContent = "Download";
-        btn.className = "download-btn";
-        btn.target = "_blank";
-        item.appendChild(document.createElement("br"));
-        item.appendChild(btn);
-      } else {
-        const msg = document.createElement("p");
-        msg.style.color = "orange";
-        msg.textContent = "⚠️ Download link not found.";
-        item.appendChild(msg);
-      }
-    } catch (e) {
-      waitMsg.remove();
-      const msg = document.createElement("p");
-      msg.style.color = "red";
-      msg.textContent = "❌ Failed to fetch download.";
-      item.appendChild(msg);
-    }
-  } else {
-    fetchAndRender(baseURL + href);
-  }
-};
-
-resultsDiv.appendChild(item);
-
-
+          resultsDiv.appendChild(item);
+        }
 
         const titleMatch = html.match(/<h2 class="head">(.*?)<\/h2>/);
         const tableMatch = html.match(/<div class="bf"[^>]*>(.*?)<\/table>/s);
