--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ width:300px;
                   btn.href = downloadLink;
                   btn.textContent = "Download";
                   btn.className = "download-btn";
-                  btn.target = "_blank";
+                  btn.target = "_self";
                   item.appendChild(document.createElement("br"));
                   item.appendChild(btn);
                 } else {
