--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@ width:300px;
       color: #666;
     }
 
+    tip{}
+
     .download-btn {
       display: inline-block;
       margin-top: 15px;
@@ -418,7 +420,8 @@ width:300px;
          const item = document.createElement("div");
           item.className = "item";
           item.innerHTML = `<strong>${title}</strong><small>${desc}</small>`;
-
+const tip = document.createElement("div");
+          tip.className = "tip";
           item.onclick = async () => {
             const matchId = href.match(/(\d{2,7})\/?$/);
             if (matchId) {
@@ -440,8 +443,8 @@ width:300px;
                   btn.textContent = "Download";
                   btn.className = "download-btn";
                   btn.target = "_self";
-                  item.appendChild(document.createElement("br"));
-                  item.appendChild(btn);
+                  tip.appendChild(document.createElement("br"));
+                  tip.appendChild(btn);
                 } else {
                   const msg = document.createElement("p");
                   msg.style.color = "orange";
